# vlc_websocket_player

./: Cargo.toml  README.md
src/: main.rs  player.rs  player_websocket_connection.rs
