[package]
name = "vlc_websocket_player"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5.13"
rocket = "0.5.1"
serde_json = "1.0.120"
vlc-rs = "0.3.0"
futures-util = "0.3.30"
log = "0.4.21"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-tungstenite = "0.24.0"
env_logger = "0.11.5"
futures = { version = "0.3.31", features = ["futures-executor"] }

